# Engine

./: CLAUDE.md  Cargo.toml
src/: main.rs
src/application/dto/: app_events.rs  asset.rs  challenge.rs  character.rs  location.rs  mod.rs  narrative_event.rs  queue_items.rs  rule_system.rs  sheet_template.rs  story_event.rs  suggestion.rs  workflow.rs
src/application/services/: approval_service.rs  asset_generation_queue_service.rs  asset_service.rs  challenge_outcome_approval_service.rs  challenge_resolution_service.rs  challenge_service.rs  character_service.rs  dm_action_queue_service.rs  dm_approval_queue_service.rs  generation_event_publisher.rs  generation_queue_projection_service.rs  generation_service.rs  interaction_service.rs  llm_queue_service.rs  llm_service.rs  location_service.rs  mod.rs  narrative_event_approval_service.rs  narrative_event_service.rs  outcome_suggestion_service.rs  outcome_trigger_service.rs  player_action_queue_service.rs  player_action_service.rs  player_character_service.rs  presence_service.rs  scene_resolution_service.rs  scene_service.rs  session_join_service.rs  settings_service.rs  skill_service.rs  story_event_service.rs  suggestion_service.rs  tool_execution_service.rs  workflow_service.rs  world_service.rs
src/domain/: mod.rs
src/domain/aggregates/: mod.rs  world_aggregate.rs
src/domain/entities/: challenge.rs  character.rs  mod.rs  (+14 more)
src/infrastructure/: comfyui.rs  config.rs  mod.rs  ollama.rs  queue_workers.rs  session.rs  session_adapter.rs  state.rs  websocket.rs  websocket_event_subscriber.rs  websocket_helpers.rs
(+84 files in other folders)
