[package]
name = "wrldbldr-engine"
version = "0.1.0"
edition = "2021"
description = "WrldBldr Engine - Backend API for TTRPG world management"
license = "MIT"
authors = ["Otto"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unique identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Neo4j driver
neo4rs = "0.8"

# WebSocket server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for Ollama and ComfyUI
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures-util = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# SQLite for queue persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

[[bin]]
name = "wrldbldr-engine"
path = "src/main.rs"
